TODO
* WINAPI add LIBERROR_OUTPUT_ERROR_INSUFFICIENT_SPACE support
* add tests

20130113
* updated msvscpp files

20130103
* 2013 update
* changes to .gitignore

20121222
* added .gitignore
* changes for new project site

20121107
* changes for warnings in msvscpp 2010 64-bit build

20121018
* fixed read beyound string issue

20120630
* worked on fix for %S in MinGW in system

20120624
* worked on fix for %S in MinGW in system

20120603
* worked on fix for %S in MinGW in error

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* worked on WINAPI fallback functions
* updated man page
* worked on msvscpp files

20120405
* added dpkg files
* added support for pkg-config to configure

20120403
* Worked on stand-alone version
