@@ -1,6 +1,6 @@
 Mac OS X
 * missing libtoolize
-* building multiple architecture binaries
+* building multiple architure binaries
 
 
 Missing libtoolize
@@ -8,19 +8,5 @@ Use glibtoolize instead
 
 
 Building multiple architecture binaries
-E.g. on Mac OS X 10.4 to build an PPC and Intel 32-bit multi binary, run the following commands:
-CFLAGS="-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386" \
-LDFLAGS="-Wl,-syslibroot,/Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386" \
-./configure --disable-dependency-tracking --prefix=$PWD/macosx/tmp/
-make
-make install
-
-E.g. on Mac OS X 10.6 to build an Intel 32-bit and 64-bit multi binary, run the following commands:
-CFLAGS="-isysroot /Developer/SDKs/MacOSX10.6.sdk -arch x86_64 -arch i386" \
-LDFLAGS="-Wl,-syslibroot,/Developer/SDKs/MacOSX10.6.sdk -arch x86_64 -arch i386" \
-./configure --disable-dependency-tracking --prefix=$PWD/macosx/tmp/
-make
-make install
-
-The binaries are installed in $PWD/macosx/tmp/
+See: http://code.google.com/p/libcerror/wiki/Building
 
