@@ -1,46 +1,0 @@
-Creating a DLL using MinGW
-
-To compile a libcerror DLL using MinGW you'll need:
-* MinGW
-
-To build a DLL using MinGW use:
-mingw32-configure --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
-mingw32-make
-
-It is recommended that you use WINAPI support but it is possible to compile 
-libcerror without it (--enable-winapi=no). The default behaviour is that libcerror
-will try to auto-detect MinGW and enable WINAPI support.
-
-If mingw32-configure and mingw32-make are not available you can build it with:
-./configure --host=i386-mingw32 --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
-make
-
-If this does not work try a script similar to the following:
-
-#!/bin/sh
-CC=/opt/local/bin/i386-mingw32-gcc
-CXX=/opt/local/bin/i386-mingw32-g++
-AR=/opt/local/bin/i386-mingw32-ar
-OBJDUMP=/opt/local/bin/i386-mingw32-objdump
-RANLIB=/opt/local/bin/i386-mingw32-ranlib
-STRIP=/opt/local/bin/i386-mingw32-strip
-MINGWFLAGS="-mwin32 -mconsole -march=i586 "
-CFLAGS="$MINGWFLAGS"
-CXXFLAGS="$MINGWFLAGS"
-
-CC=$CC CXX=$CXX AR=$AR OBJDUMP=$OBJDUMP RANLIB=$RANLIB STRIP=$STRIP ./configure --host=i586-mingw32msvc --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
-CC=$CC CXX=$CXX AR=$AR OBJDUMP=$OBJDUMP RANLIB=$RANLIB STRIP=$STRIP CFLAGS="$CFLAGS" CXXFLAGS="$CXXFLAGS" make
-
-If you get compiler errors like:
-#error WINAPI file open function for Windows 2000 or earlier NOT implemented yet
-
-That means WINVER is not set or set to a version predating Windows XP (0x0501)
-and you'll have to set WINVER manually like:
-CFLAGS=-DWINVER=0x0501 ./configure --host=i386-mingw32 --enable-winapi=yes
-
-You should end up with the following DLL:
-libcerror-<version>/libcerror/.libs/libcerror-1.dll
-
-To install the libcerror DLL in the MinGW build tree use:
-sudo make install
-
