@@ -2,7 +2,4 @@ AUTHORS
 COPYING
 NEWS
 README
-README.dll
 README.macosx
-README.mingw
-README.static
