@@ -7,6 +7,6 @@ Name: libuna
 Description: Library to support cross-platform C error functions
 Version: @VERSION@
 Libs: -L${libdir} -lcerror
-Libs.private: @ax_libcstring_libs_private@ 
+Libs.private: @ax_libcstring_libs_private@
 Cflags: -I${includedir}
 
