@@ -3,14 +3,14 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/common \
 	@LIBCSTRING_CPPFLAGS@
 
-TESTS = 
+TESTS =
 
 check_SCRIPTS =
 
 EXTRA_DIST = \
 	$(check_SCRIPTS)
 
-check_PROGRAMS = 
+check_PROGRAMS =
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
